公開　Django開発環境構築（pyenv・venv）

--- a/articles/a3194e528592b7.md
+++ b/articles/a3194e528592b7.md
@@ -3,7 +3,7 @@ title: "Django開発環境構築（pyenv・venv）"
 emoji: "🎃"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["django", "python"]
-published: false
+published: true
 ---
 
 # はじめに
