修正：TauriへのMantine UIの導入

--- a/articles/5d4ff3300809e6.md
+++ b/articles/5d4ff3300809e6.md
@@ -9,7 +9,7 @@ published: true
 # まえがき
 
 [ドキュメント](https://mantine.dev/guides/vite/)にもあるが、自分用のメモとしてもまとめておく。
-ようは、Vite プロジェクトへの導入ということでいいらしい。
+ようは、Vite プロジェクトへの導入という理解でいいらしい。
 
 # Mantine の導入
 
