タイトル変更

--- a/articles/5d4ff3300809e6.md
+++ b/articles/5d4ff3300809e6.md
@@ -1,5 +1,5 @@
 ---
-title: "TauriへのMantine UIの導入"
+title: "TauriにMantine UIを導入する方法"
 emoji: "🌊"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["tauri", "mantine"]
