--- a/articles/5d4ff3300809e6.md
+++ b/articles/5d4ff3300809e6.md
@@ -105,6 +105,7 @@ npm install @mantine/modals
 
 ```ts:App.tsx
 import { Button, MantineProvider } from "@mantine/core";
+import { ModalsProvider } from '@mantine/modals';
 import "@mantine/core/styles.css";
 function App() {
   return (
